fix scrollbar

--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -1,6 +1,6 @@
 .feed {
     flex: 5.5;
-    height: 100vh;
+    height: 95vh;
     overflow-y: scroll;
 
 }
