--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,4 +1,6 @@
 .homeContainer {
     display: flex;
-    width: 100%;
+    width: 100vh;
+    margin: 0;
+
 }
